[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
tower-http = {version = "0.6.2", features = ["fs"]}
serde_json = "1.0.138"

[dev-dependencies]
httpc-test = "0.1.1"
anyhow = "1"